commit 87d63e649da5e12409c50cb06d3d2a01e9880759
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-12-15 17:25:21 +0100

    Improve handling of µ in y axis for plot.TOXSWA_cwa

commit 4944d7ade227f1dd54c94b6a02c3c849dc1fb8ab
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-12-14 10:19:43 +0100

    Update copyright date

commit 0e1d517d4d6351f2d43ab8636363e73d8b8cf677
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-11-04 11:48:08 +0100

    Option to thin low TOXSWA PECsw data for plotting
    
    to reduce the file size of plots e.g. as PDF files

commit eb4465035dd44907eae3ea0340221316b7cfca12
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-11-03 11:18:10 +0100

    Also return runoff percentages

commit 06b528f0c19ca9f7a311612c0e9ae80c0d0c1d3f
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-10-27 18:15:29 +0200

    Exposit runoff calculations for surface water

commit 2cd464455a22791c0450ada45a0e0128c637fade
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-10-23 15:19:03 +0200

    Typos, rebuild static docs

commit 6f6575701d9b028af4b3b1b4b61c36d4989e2812
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-10-10 14:03:20 +0200

    Add ORCID

commit a33f1bbbf6f6121e8ad40284690a463733a00bc2
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-10-09 08:48:39 +0200

    Write Step 2 input files on windows

commit 311c4fbcc51ad727551da41569d64e6bc290c2b2
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-10-06 09:30:21 +0200

    Update docs, small bugfix

commit 72d7358581bca88af8c507b6c80791100aaafafc
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-08-24 10:30:11 +0200

    Build for windows using roxygen from master
    
    Now that roxygen can handle UTF8 characters in function
    arguments thanks to Hadley Wickham and Jim Hester

commit a8a2a9d57f40ec7a4fc70df3dc470d88cd10c525
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-07-24 16:31:07 +0200
