@@ -16,7 +16,6 @@ export(FOCUS_PELMO_crop_sze_names)
 export(FOCUS_PELMO_crops)
 export(FOCUS_PELMO_location_codes)
 export(GUS)
-export(Koc_breaks)
 export(PEC_soil)
 export(PEC_sw_drainage_UK)
 export(PEC_sw_drift)
@@ -28,7 +27,6 @@ export(PELMO_runs)
 export(SFO_actual_twa)
 export(SSLRC_mobility_classification)
 export(TOXSWA_cwa)
-export(buffers)
 export(chent_focus_sw)
 export(endpoint)
 export(evaluate_PELMO)
@@ -36,6 +34,8 @@ export(focus_80th)
 export(geomean)
 export(max_twa)
 export(one_box)
+export(perc_runoff_exposit)
+export(perc_runoff_reduction_exposit)
 export(pfm_degradation)
 export(read.TOXSWA_cwa)
 export(run_PELMO)
@@ -48,6 +48,7 @@ export(twa)
 import(graphics)
 import(mkin)
 importFrom(R6,R6Class)
+importFrom(grDevices,dev.cur)
 importFrom(methods,is)
 importFrom(mkin,mkinpredict)
 importFrom(parallel,mclapply)
