@@ -75,7 +75,7 @@
     <p>A table of the runoff reduction percentages used in Exposit 3 for different vegetated buffer widths</p>
     
 
-    <pre class="usage"><span class='no'>buffers</span></pre>
+    <pre class="usage"><span class='no'>perc_runoff_reduction_exposit</span></pre>
         
     <h2 class="hasAnchor" id="format"><a class="anchor" href="#format"></a>Format</h2>
 
